# blv

./: .env.template  .gitignore  Dockerfile  Dockerfile.light  README.md  benchmark.py  compose.yaml  launch-blv.sh  launch.py  pyproject.toml  start_workers.sh
.github/workflows/: docker-image.yml
examples/: benchmark.py  example-input-theorems.json  example-verified.json  example.py
src/blv/: __init__.py  __main__.py  config.py  job.py  repl.py  utils.py  verify.py  worker.py
src/pylean/: __init__.py  repl.py
src/pyleanrepl/: __init__.py  __main__.py  client.py  config.py  job.py  repl.py  server.py  verify.py  worker.py
