[project]
name = "pyleanrepl"
version = "0.1.1"
description = "Simple wrapper for LeanREPL"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
repl = {"cmd" = "python src/pyleanrepl/repl.py"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyleanrepl"]

[tool.black]
line-length = 120
