[project]
name = "blv"
version = "0.2.3"
description = "Simple wrapper for LeanREPL"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "rq>=2.3.2",
    "redis[hiredis]>=6.0.0",
    "more-itertools>=10.7.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=6.0.1",
    "black>=25.1.0",
    "ipython>=9.2.0",
    "ruff>=0.11.11",
    "datasets>=4.2.0",
]

[tool.rye.scripts]
repl = {"cmd" = "python src/blv/repl.py"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blv"]

[tool.black]
line-length = 120
